# resnet-cifar10

./: pyproject.toml
.github/workflows/: docker.yml  gh-deploy.yml  pyright.yml  ruff.yml  test.yml
