[project]
name = "default"
version = "0.1.0"
description = "This repository contains configurations to set up a Python development environment using VSCode's Dev Container feature. The environment includes uv and Ruff."

authors = [{ name = "a5chin", email = "a5chin.origin+contact@gmail.com" }]
maintainers = [{ name = "a5chin", email = "a5chin.origin+contact@gmail.com" }]

requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "google-cloud-logging>=3.11.3",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "matplotlib>=3.9.4",
    "torcheval>=0.0.7",
    "tqdm>=4.67.1",
    "timm>=1.0.14",
]

[tool.uv]
dev-dependencies = [
    "mkdocs-material>=9.5.50",
    "pre-commit>=4.1.0",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"
